--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
-  "homepage": "https://kaahohara.github.io/NewZealand/"
+"homepage": "github-page/"
+
 
 }
