--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kaahohara.github.io/NewZealand",
+  "homepage": "https://kaahohara.github.io",
   "name": "package",
   "private": true,
   "version": "0.0.0",
